# Healthcare-Claims-AI

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  Dockerfile.backend  Dockerfile.frontend  README.md  SCRIPTS.md  architecture.html  backend-architecture.html  docker-compose.yml  env.template  frontend-architecture.html  genai-architecture.html
backend/: cleanup_bm25.py  pyproject.toml  test_agent.py  test_rag.py
backend/app/: config.py  main.py
backend/app/agent/: graph.py  llm.py  nodes.py  prompts.py  state.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  data.py  upload.py
backend/app/services/: conversations.py  database.py  storage.py  vectorstore.py
data/: generate_benefits_pdf.py  generate_claims.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: ai-opportunities-keyboard.spec.ts
frontend/scripts/: check-bundle-budget.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentTrace.tsx  ChartView.tsx  ChatPanel.tsx  Citations.tsx  Layout.tsx  MessageBubble.tsx  PalmettoLogo.tsx  ResultsTable.tsx  SqlViewer.tsx  UploadPanel.tsx
frontend/src/components/__tests__/: frontend-accessibility.a11y.test.tsx  handoff-cta.test.tsx  keyboard-flows.test.tsx
frontend/src/config/: featureFlags.ts
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/mocks/: aiOpportunities.ts
frontend/src/test/: setup.ts  vitest.d.ts
scripts/: run_demo.sh  seed_data.sh  setup_aws.sh
(+12 files in other folders)
