[project]
name = "bcbs-claims-ai"
version = "0.1.0"
description = "BCBS Claims AI Demo - Intelligent routing agent with NL2SQL and RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "langchain==0.3.18",
    "langchain-anthropic==0.3.10",
    "langchain-community==0.3.17",
    "langgraph==0.2.74",
    "duckdb==1.2.0",
    "pymupdf==1.25.3",
    "fpdf2==2.8.2",
    "rank-bm25==0.2.2",
    "python-multipart==0.0.20",
    "pydantic-settings==2.7.1",
    "sse-starlette==2.2.1",
    "ruff==0.9.4",
]

[project.optional-dependencies]
aws = [
    "boto3==1.36.14",
    "langchain-aws==0.2.12",
]
chroma = [
    "chromadb==0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
